--- a/AppBanco/app/src/main/res/layout/activity_cuenta_elegida.xml
+++ b/AppBanco/app/src/main/res/layout/activity_cuenta_elegida.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/fondo2"
     android:orientation="vertical"
     android:padding="20dp"
     tools:context=".Vistas.CuentaElegida">
@@ -20,6 +21,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="id"
+            android:textColor="#FFFAFA"
             android:textSize="34sp" />
 
         <TextView
@@ -28,6 +30,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="saldo"
+            android:textColor="#FFFFFF"
             android:textSize="34sp" />
 
         <TextView
@@ -35,7 +38,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="ID Objetivo (Solo Transferencia): " />
+            android:text="ID Objetivo (Solo Transferencia): "
+            android:textColor="#FFFFFF" />
 
         <Spinner
             android:id="@+id/idSpinnerObjetivoTransferencia"
@@ -47,14 +51,16 @@
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cantidad Operación:" />
+            android:text="Cantidad Operación:"
+            android:textColor="#F6F6F6" />
 
         <EditText
             android:id="@+id/idtndDineroOperacion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="numberDecimal" />
+            android:inputType="numberDecimal"
+            android:textColor="#F1F1F1" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,7 +74,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:text="Transferir" />
+                android:backgroundTint="#2683AE"
+                android:text="Transferir"
+                android:textColorLink="#03A9F4" />
 
             <Button
                 android:id="@+id/idBIngresar"
@@ -76,7 +84,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:text="Ingresar" />
+                android:backgroundTint="#2683AE"
+                android:text="Ingresar"
+                android:textColorLink="#2196F3" />
 
             <Button
                 android:id="@+id/idBPagar"
@@ -84,7 +94,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="5dp"
                 android:layout_weight="1"
-                android:text="Pagar" />
+                android:backgroundTint="#2683AE"
+                android:text="Pagar"
+                android:textColorLink="#03A9F4" />
 
         </LinearLayout>
 
@@ -93,13 +105,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Elegir otra cuenta" />
+            android:backgroundTint="#2683AE"
+            android:text="Elegir otra cuenta"
+            android:textColorLink="#03A9F4" />
 
         <TextView
             android:id="@+id/idtvHistorialOperaciones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Historial" />
+            android:text="Historial"
+            android:textColor="#F6F3F3"
+            android:textColorLink="#00BCD4" />
     </LinearLayout>
 
 </LinearLayout>
