--- a/AppBanco/app/src/main/res/layout/activity_main.xml
+++ b/AppBanco/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/fondobb"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -16,13 +17,15 @@
             android:gravity="center"
             android:paddingBottom="20dp"
             android:text="Elige una cuenta:"
+            android:textColor="#FFFCFC"
             android:textSize="34sp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Identificador:" />
+            android:text="Identificador:"
+            android:textColor="#F6F6F6" />
 
         <Spinner
             android:id="@+id/idSpinnerIdCuentas"
@@ -30,13 +33,18 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginBottom="50dp"
+            android:backgroundTint="#FDF7F7"
+            android:foregroundTint="#EFE6E6"
             android:gravity="center" />
 
         <Button
             android:id="@+id/idBEntrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Entrar" />
+            android:backgroundTint="#2683AE"
+            android:foregroundTint="#2196F3"
+            android:text="Entrar"
+            android:textColorLink="#EFE9E9" />
 
     </LinearLayout>
 
