--- a/3_Yugioh/Yugioh/app/src/main/res/layout/activity_main.xml
+++ b/3_Yugioh/Yugioh/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context=".Vista.MainActivity">
 
     <LinearLayout
+        android:id="@+id/llHHechizosJ2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -18,8 +19,9 @@
         android:rotation="0">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl1HechizoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -27,6 +29,27 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv1HechizoJ2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:rotation="0"
+                android:scaleType="center"
+                android:src="@color/black" />
+
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/fl2HechizoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="@drawable/imageview_border"
+            android:padding="1dp"
+            android:rotation="0">
+
+            <ImageView
+                android:id="@+id/iv2HechizoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -36,8 +59,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl3HechizoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -45,6 +69,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv3HechizoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -54,8 +79,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl4HechizoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -63,6 +89,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv4HechizoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -72,8 +99,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl5HechizoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -81,24 +109,7 @@
             android:rotation="0">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:rotation="0"
-                android:scaleType="center"
-                android:src="@drawable/carta_vacia" />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="@drawable/imageview_border"
-            android:padding="1dp"
-            android:rotation="0">
-
-            <ImageView
+                android:id="@+id/iv5HechizoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -110,6 +121,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llHMonstruosJ2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -117,8 +129,9 @@
         android:rotation="0">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl1MonstruoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -126,6 +139,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv1MonstruoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -135,8 +149,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl2MonstruoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -144,6 +159,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv2MonstruoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -153,8 +169,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl3MonstruoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -162,6 +179,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv3MonstruoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -171,8 +189,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl4MonstruoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -180,6 +199,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv4MonstruoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -189,8 +209,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl5MonstruoJ2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -198,6 +219,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv5MonstruoJ2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -206,16 +228,51 @@
 
         </FrameLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llHJugador2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvVidaJ2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="La vida del jugador 2 jeje"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="5dp"
-        android:layout_marginVertical="20dp"
-        android:background="@color/black" />
+        android:layout_marginVertical="5dp"
+        android:background="@color/black"
+        android:visibility="visible"
+        tools:visibility="visible" />
 
     <LinearLayout
+        android:id="@+id/llHJugador1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tvVidaJ1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="La vida del jugador 1 jeje"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llHMonstruosJ1"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -223,8 +280,9 @@
         android:rotation="0">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl1MonstruoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -232,6 +290,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv1MonstruoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -241,8 +300,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl2MonstruoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -250,6 +310,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv2MonstruoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -259,8 +320,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl3MonstruoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -268,6 +330,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv3MonstruoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -277,8 +340,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl4MonstruoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -286,6 +350,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv4MonstruoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -295,8 +360,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl5MonstruoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -304,6 +370,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv5MonstruoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -315,6 +382,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llHHechizosJ1"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -322,8 +390,9 @@
         android:rotation="0">
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl1HechizoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -331,6 +400,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv1HechizoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -340,8 +410,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl2HechizoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -349,6 +420,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv2HechizoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -358,8 +430,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl3HechizoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -367,6 +440,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv3HechizoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -376,8 +450,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl4HechizoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -385,6 +460,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv4HechizoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -394,8 +470,9 @@
         </FrameLayout>
 
         <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/fl5HechizoJ1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:layout_weight="1"
             android:background="@drawable/imageview_border"
@@ -403,6 +480,7 @@
             android:rotation="0">
 
             <ImageView
+                android:id="@+id/iv5HechizoJ1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:rotation="0"
@@ -426,6 +504,7 @@
             tools:ignore="SpeakableTextPresentCheck">
 
             <LinearLayout
+                android:id="@+id/llHAbajoJ1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -550,8 +629,8 @@
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_margin="2dp"
                     android:background="@drawable/imageview_border"
                     android:padding="1dp"
