14/6/2024 Mejoras Comparar imagen y vistaActivity y Global

--- a/3_Yugioh/Yugioh/app/src/main/res/layout/activity_vista.xml
+++ b/3_Yugioh/Yugioh/app/src/main/res/layout/activity_vista.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="5dp"
     android:rotation="0"
-    tools:context=".Vista.MainActivity">
+    tools:context=".Vista.VistaActivity">
 
     <LinearLayout
         android:id="@+id/llHHechizosJ2"
