18/6/2024 Imagenes y musica de Jose

--- a/3_Yugioh/Yugioh/app/src/main/res/layout/activity_vista.xml
+++ b/3_Yugioh/Yugioh/app/src/main/res/layout/activity_vista.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="5dp"
     android:rotation="0"
+    android:background="@mipmap/opi"
     tools:context=".Vista.VistaActivity">
 
     <LinearLayout
