--- a/3_Yugioh/Yugioh/app/src/main/res/layout/activity_menu_principal.xml
+++ b/3_Yugioh/Yugioh/app/src/main/res/layout/activity_menu_principal.xml
@@ -7,4 +7,107 @@
     android:layout_height="match_parent"
     tools:context=".Vista.MenuPrincipalActivity">
 
+    <!-- Video de fondo -->
+    <VideoView
+        android:id="@+id/videoView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <!-- Contenedor para el contenido superpuesto -->
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#99000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <TextView
+            android:id="@+id/marqueeText"
+            android:layout_width="match_parent"
+            android:layout_height="36dp"
+            android:background="@mipmap/sol"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="YU-GI-HO un juego de batalla de monstruos donde tienes que demostrar quien tiene que ser el ganador asi que QUE COMIENCE EL DUUUUUELOOOO!!!"
+            android:textColor="@android:color/background_light"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/incidoD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="47dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="197dp"
+            android:backgroundTint="#2E1832"
+            android:text="QUE COMIENCE EL DUELO"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/turotial"
+            android:layout_width="297dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="60dp"
+            android:layout_marginEnd="53dp"
+            android:layout_marginBottom="140dp"
+            android:backgroundTint="#2E1832"
+            android:text="TUTORIAL"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/CONFIGURAR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="81dp"
+            android:layout_marginEnd="69dp"
+            android:layout_marginBottom="88dp"
+            android:backgroundTint="#2E1832"
+            android:text="CONFIGURAR"
+            android:textAlignment="center" />
+
+        <Button
+            android:id="@+id/SALIR"
+            android:layout_width="185dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="120dp"
+            android:layout_marginEnd="106dp"
+            android:layout_marginBottom="36dp"
+            android:backgroundTint="#2E1832"
+            android:text="SALIR"
+            android:textAlignment="center" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/incidoD"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="26dp"
+            app:srcCompat="@mipmap/dueloyugi" />
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
